@@ -1,5 +1,10 @@
 CruiseControl Release Notes - Latest CVS
 
+Schedule
+----------------------
+* Fixed a bug where checkPauseBuilders would not return a value larger than one day.
+* Fixed a bug where chained pauses where not respected, with builds happening after the end of the first pause and during the second.
+
 CruiseControl Release Notes - 2.1.3
 
 log4j.properties
